--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     <section class="section">
         <div class="videoWrapper">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLWWxZwM6WdrPMlwOzSlamlxu2y0XAj5qT" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="#" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
-        <p class="note">If you are having issues, you can watch this playlist directly on <a href="https://www.youtube.com/playlist?list=PLWWxZwM6WdrPMlwOzSlamlxu2y0XAj5qT" target="_blank" rel="noopener noreferrer">YouTube</a></p>
+        <p class="note">If you are having issues, you can watch this playlist directly on <a href="#" target="_blank" rel="noopener noreferrer">YouTube</a></p>
 
     </section>
 
