--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="section">
         <div class="videoWrapper">
-                <iframe width="560" height="315" src="#" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <p class="note">If you are having issues, you can watch this playlist directly on <a href="#" target="_blank" rel="noopener noreferrer">YouTube</a></p>
