--- a/index.html
+++ b/index.html
@@ -18,23 +18,21 @@
 
     <div class="background"></div>
 
-    <!-- <div class="is-clearfix"></div> -->
-
     <section class="section header-section">
         <div class="container is-fluid">
             <img src="assets/img/warley-logo.png">
-            <h1 class="title has-text-white is-1 is-size-1-touch">Warley Summer Festival 2020</h1>
+            <h1 class="title has-text-white is-1 is-size-1-touch">Summer Festival 2020</h1>
         </div>
     </section>
 
-    <section class="section">
+    <!-- <section class="section">
         <div class="videoWrapper">
                 <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <p class="note">If you are having issues, you can watch this playlist directly on <a href="#" target="_blank" rel="noopener noreferrer">YouTube</a></p>
 
-    </section>
+    </section> -->
 
     <section class="section">
         <p class="is-size-1">Saturday 13th June<br>7pm onwards</p>
