UPDATE: Fonts and remove iFram section for now

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- <section class="section">
         <div class="videoWrapper">
-                <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <p class="note">If you are having issues, you can watch this playlist directly on <a href="#" target="_blank" rel="noopener noreferrer">YouTube</a></p>
@@ -35,7 +35,7 @@
     </section> -->
 
     <section class="section">
-        <p class="is-size-1">Saturday 13th June<br>7pm onwards</p>
+        <p class="is-size-1">Saturday 13th June<br>From 7pm</p>
     </section>
 
     <!-- <section class="section">
@@ -46,5 +46,8 @@
             </p>
         </div>
     </section> -->
+
+
+    <a href="http://www.freepik.com">Designed by Freepik</a>
 </body>
 </html>
