UPDATE: Fonts and remove iFram section for now

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
     </section> -->
 
 
-    <a href="http://www.freepik.com">Designed by Freepik</a>
+    <a href="http://www.freepik.com" target="_blank" rel="noopener noreferrer">Designed by Freepik</a>
 </body>
 </html>
