UPDATE: To include timer

--- a/index.html
+++ b/index.html
@@ -25,14 +25,19 @@
         </div>
     </section>
 
-    <!-- <section class="section">
+    <section id="timer" class="section">
+        <div class="container is-fluid">
+            <div id="countdown" class="is-size-1"></div>
+        </div>
+    </section>
+
+    <section id="video" class="section">
         <div class="videoWrapper">
-            <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWWxZwM6WdrOjKxnfrhs_xmd1Lvfekvrz" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
-        <p class="note">If you are having issues, you can watch this playlist directly on <a href="#" target="_blank" rel="noopener noreferrer">YouTube</a></p>
-
-    </section> -->
+        <p class="note">If you are having issues, you can watch this playlist directly on <a href="https://www.youtube.com/embed/videoseries?list=PLWWxZwM6WdrOjKxnfrhs_xmd1Lvfekvrz" target="_blank" rel="noopener noreferrer">YouTube</a></p>
+    </section>
 
     <section class="section">
         <p class="is-size-1">Saturday 13th June<br>From 7pm</p>
@@ -40,14 +45,19 @@
 
     <!-- <section class="section">
         <div class="lineup">
-            <p class="is-size-1">Lizzo</p>
-            <p class="is-size-3">Stormzy / Beyonce</p>
-            <p class="is-size-4">Biffy Clyro / Fontaines D.C / Catfish and the bottlemen / Elbow / Mumford &amp; sons / The Killers / Imagine Dragons / Tom Walker / Stevie Wonder / Bruno Mars / Estelle / Rudimental / Dizzee Rascal / Pharrell Williams / Billie Eilish / Sigrid / Wonderstuff / Billy Ocean / The Jacksons / Lil nas X / George from Asda
+            <p class="is-size-1">General Leavy</p>
+            <p class="is-size-3">Elbow / Oasis</p>
+            <p class="is-size-4">Biffy Clyro / Fontaines D.C / Catfish and the bottlemen / Elbow / Mumford &amp; sons / The Killers / Imagine Dragons / Tom Walker / Stevie Wonder / Bruno Mars / Estelle / Rudimental / Dizzee Rascal / Pharrell Williams / Billie Eilish / Sigrid / Wonderstuff / Billy Ocean / The Jacksons / Dolly Parton / Dave Smith
             </p>
         </div>
     </section> -->
 
 
     <a href="http://www.freepik.com" target="_blank" rel="noopener noreferrer">Designed by Freepik</a>
+
+
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="assets/js/jquery.countdown.min.js"></script>
+    <script src="assets/js/all.js"></script>
 </body>
 </html>
